--- a/README
+++ b/README
@@ -8,6 +8,6 @@ Works with:
 
 You can check out it's functionality at http://mzavoloka.ru
 
-Admin tools are available for user 'admin', password 'admin'. Also, this user can do such things as editing or deleting threads/messages, editing other user profiles.
-Also, there is another user 'moderator', password 'moderator'. This user has same permissions as admin except of access to admin tools.
+Admin tools are available for user 'admin', password 'admin'. Also, this user can edit or delete threads/messages, ban users. In admin tools admin can edit forum constants such as, for example, maximum image file size or session expiration time, edit user profiles (feature in development), edit permissions of other users (feature in development).
+There is another special user 'moderator', password 'moderator'. This user has same permissions as admin except of access to admin tools.
 
